crates/tokr-parser/src/snapshots/tokr_parser__tests__stray_token.snap
---
source: crates/tokr-parser/src/lib.rs
expression: file
---
File {
    decls: [
        ThemeDecl {
            path: [
                Field(
                    "a",
                ),
            ],
            path_span: Span {
                lo: 11,
                hi: 25,
            },
            var_name: "a",
            is_sass_var: true,
            value: Raw {
                text: "1",
                span: Span {
                    lo: 30,
                    hi: 31,
                },
            },
            span: Span {
                lo: 11,
                hi: 32,
            },
        },
    ],
}
