crates/tokr-parser/src/snapshots/tokr_parser__tests__valid_decl_array.snap
---
source: crates/plume-parser/src/lib.rs
expression: file
---
File {
    decls: [
        ThemeDecl {
            path: [
                Field(
                    "boxShadow",
                ),
                Index(
                    0,
                ),
            ],
            path_span: Span {
                lo: 0,
                hi: 25,
            },
            var_name: "shadow",
            is_sass_var: true,
            value: VarRef {
                css_var: "--shadow",
                span: Span {
                    lo: 35,
                    hi: 48,
                },
            },
            span: Span {
                lo: 0,
                hi: 49,
            },
        },
    ],
}
